O424-001 remove rules which regenerate configure

--- a/Makefile.users
+++ b/Makefile.users
@@ -272,15 +272,15 @@ show-dest-dirs:
 # or configure.in is modified
 ######################################################################
 
-configure: configure.in
-	autoconf 
-	./configure
-
-Makefile.configurable: Makefile.configurable.in configure.in
-	./config.status
-
-config.status: configure
-	./config.status --recheck
+# configure: configure.in
+# 	autoconf
+# 	./configure
+#
+# Makefile.configurable: Makefile.configurable.in configure.in
+# 	./config.status
+#
+# config.status: configure
+# 	./config.status --recheck
 
 # stripped-arch-binary
 
