minor update of .gitignore after version bump to 1.01
Parsers and lexers for SMT and SMT2 file formats are no longer generated and
their files need not be ignored. Instead, new file config.ml is generated
and ignored.

Also, add paths to ignored files (it never hurts to be precise).

--- a/.gitignore
+++ b/.gitignore
@@ -5,18 +5,11 @@
 *.cmi
 *.cmt
 *.cmti
-smt_lex.ml
-smt_parser.ml
-smt_parser.mli
-smt_parser.output
-smtlib2_lex.ml
-smtlib2_parse.ml
-smtlib2_parse.mli
-smtlib2_parse.output
-why_lexer.ml
-why_parser.ml
-why_parser.mli
-why_parser.output
+src/util/config.ml
+src/parsing/why_parser.ml
+src/parsing/why_parser.mli
+src/parsing/why_parser.output
+src/parsing/why_lexer.ml
 alt-ergo.opt
 .depend
 config.status
