commiting update to alt-ergo

--- a/Makefile.configurable.in
+++ b/Makefile.configurable.in
@@ -54,6 +54,5 @@ EXE = @EXE@
 ENABLEGUI = @ENABLEGUI@
 ZARITHLIB = @ZARITHLIB@
 OCAMLGRAPHLIB=
-# @OCAMLGRAPHLIB@ not used anymore
 LABLGTK2LIB=@LABLGTK2LIB@
-
+OCPLIBSIMPLEXLIB=@OCPLIBSIMPLEXLIB@
