PB21-023 update alt-ergo
Fix some errors that were probably introduced during merge

* reintroduce changes to steps
* fix configure results
* disable compatibility check ocaml ocamlfind

--- a/Makefile.configurable.in
+++ b/Makefile.configurable.in
@@ -52,7 +52,8 @@ OCAMLVERSION = @OCAMLVERSION@
 OCAMLWIN32 = @OCAMLWIN32@
 EXE = @EXE@
 ENABLEGUI = @ENABLEGUI@
-ZARITHLIB = @ZARITHLIB@
-OCAMLGRAPHLIB=
+ZARITHLIB=@ZARITHLIB@
+CAMLZIPLIB=@CAMLZIPLIB@
+#OCAMLGRAPHLIB=@OCAMLGRAPHLIB@
 LABLGTK2LIB=@LABLGTK2LIB@
 OCPLIBSIMPLEXLIB=@OCPLIBSIMPLEXLIB@
