--- a/sources/tools/text/dune
+++ b/sources/tools/text/dune
@@ -7,7 +7,7 @@
   (name         Main_text)
   (public_name  alt-ergo)
   (package      alt-ergo)
-  (libraries    alt-ergo-lib alt-ergo-parsers stdlib-shims)
+  (libraries    alt-ergo-lib alt-ergo-parsers)
   (link_flags   (:include flags.dune))
   (modules      Main_input Main_text)
 )
