CI&Build fixes (#502)
* Add apt-get update step to workflows

* Some more apt-get updates

* Update to latest cmdliner

* Update bounds for cmdliner version in opam files

* Properly exit after --help/--version

* Require --prefix in configure script if opam is not present

* Try and remove superfluous printing

* Restore prefix in Makefile.config

* WIP

* Restrict dune version to avoid bug in dune uninstall

See https://github.com/ocaml/dune/issues/5542

--- a/.github/workflows/build_js.yml
+++ b/.github/workflows/build_js.yml
@@ -26,6 +26,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Update apt-get database
+      - name: Update apt-get database
+        run: sudo apt-get update
+
       # Retrieve the opam cache with unique key
       # A new cache is created/used if the `.opam` files changes or
       # if we use another ocaml version
