--- a/.github/workflows/build_ubuntu.yml
+++ b/.github/workflows/build_ubuntu.yml
@@ -31,6 +31,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Update apt-get database
+      - name: Update apt-get database
+        run: sudo apt-get update
+
       # Retrieve the opam cache with unique key
       # A new cache is created/used if the `.opam` files changes or
       # if we use another ocaml version
@@ -123,6 +127,10 @@ jobs:
       # Checkout the code of the current branch
       - name: Checkout code
         uses: actions/checkout@v2
+
+      # Update apt-get database
+      - name: Update apt-get database
+        run: sudo apt-get update
 
       # Retrieve the opam cache with unique key
       # A new cache is created/used if the `.opam` files changes or
