--- a/.github/workflows/build_make.yml
+++ b/.github/workflows/build_make.yml
@@ -24,6 +24,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      # Update apt-get database
+      - name: Update apt-get database
+        run: sudo apt-get update
+
       # Retrieve the opam cache with unique key
       # A new cache is created/used if the `.opam` files changes or
       # if we use another ocaml version
@@ -91,6 +95,10 @@ jobs:
       # Checkout the code of the current branch
       - name: Checkout code
         uses: actions/checkout@v2
+
+      # Update apt-get database
+      - name: Update apt-get database
+        run: sudo apt-get update
 
       # Retrieve the opam cache with unique key
       # A new cache is created/used if the `.opam` files changes or
@@ -161,6 +169,10 @@ jobs:
       # Checkout the code of the current branch
       - name: Checkout code
         uses: actions/checkout@v2
+
+      # Update apt-get database
+      - name: Update apt-get database
+        run: sudo apt-get update
 
       # Retrieve the opam cache with unique key
       # A new cache is created/used if the `.opam` files changes or
