--- a/altgr-ergo.opam
+++ b/altgr-ergo.opam
@@ -15,12 +15,12 @@ doc: "https://ocamlpro.github.io/alt-ergo"
 bug-reports: "https://github.com/OCamlPro/alt-ergo/issues"
 depends: [
   "ocaml" {>= "4.05.0"}
-  "dune" {>= "2.0"}
+  "dune" {>= "2.0" & < "3.0"}
   "alt-ergo-lib" {= version}
   "alt-ergo-parsers" {= version}
   "lablgtk"
   "conf-gtksourceview"
-  "cmdliner"
+  "cmdliner" {>= "1.1.0"}
   "odoc" {with-doc}
 ]
 dev-repo: "git+https://github.com/OCamlPro/alt-ergo.git"
