--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,8 +23,8 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - macos-latest
-          - macos-15-large
+          - macos-13
+          - macos-14
           - ubuntu-latest
           - windows-latest
         ocaml-compiler:
